Fix banner-background z-index

--- a/static_in_dev/css/style.css
+++ b/static_in_dev/css/style.css
@@ -608,6 +608,7 @@ html, body {
   right: 0;
   margin: 0 auto;
   padding: 0;
+  z-index: 2;
 }
 
 .banner__title {
@@ -1226,7 +1227,7 @@ html, body {
   overflow: visible;
   text-transform: none;
   display: inline-block;
-  width: 300px;
+  min-width: 300px;
   height: 75px;
   border: none;
   background: linear-gradient(to bottom,#52525b 0,#3d3d46 100%);
